@@ -14,4 +14,5 @@ with contributions by:
     Kristjan G. Bjarnason <kgb@gangverk.is>
     Nicu Pavel <npavel@ituner.com>
     Kai Krakow <kai@kaishome.de>
+    Atsuhiko Yamanaka <ymnk@jcraft.com>
 
